hphp/test/slow/class-ptr/enum-reject-2.php.expectf

Fatal error: Invalid base type for enum E in %s/class-ptr/enum-reject-2.php on line 3
